--- a/InternetShop/Tests/log4net.config
+++ b/InternetShop/Tests/log4net.config
@@ -5,7 +5,7 @@
 	</configSections>
 <log4net>
 	<appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-		<file value="D:/AQA/C#/.NetProjects AQA/InternetShop/InternetShop/Logs/example.txt"/>
+		<file value="D:/AQA/C#/.NetProjects AQA/InternetShop/InternetShop/Logs/TestResult.xml"/>
 		<appendToFile value="true" />
 		<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 		<layout type="log4net.Layout.PatternLayout">
